# CanaryDemo

./: .gitignore  README.md
.github/: dependabot.yml
backend/: Cargo.toml  Dockerfile
backend/config/: config.yaml
backend/src/: main.rs
frontend/: Cargo.toml  Dockerfile
frontend/src/: main.rs
frontend/static/: stats.js
frontend/templates/: base.tera  stats.tera
manifests/: backend-deployment.yaml  backend-ingress.yaml  canary.yaml  frontend-deployment.yaml  frontend-ingress.yaml  secret.yaml
tasks/: Task-#1.md  Task-#2.md
