[package]
name = "color-backend"
version = "0.1.0"
authors = ["marius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = "1.0"
serde_json = "1.0" 
serde_derive = "1.0"
serde_yaml = "0.8"
clap = "3.0.0-beta.2"