[package]
name = "color-frontend"
version = "0.1.0"
authors = ["marius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "json", "serve"]
